[gd_scene load_steps=2 format=3 uid="uid://hqseyrqeif7i"]

[ext_resource type="Script" path="res://GUI/ConfirmationPopup.gd" id="2"]

[node name="ConfirmationPopup" type="Popup"]
process_mode = 3
size = Vector2i(235, 105)
exclusive = true
script = ExtResource("2")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 4.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
offset_left = 857.0
offset_top = 505.0
offset_right = 1054.0
offset_bottom = 566.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
offset_right = 197.0
offset_bottom = 26.0
text = "Do you want to continue?"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
offset_top = 30.0
offset_right = 197.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="ButtonYes" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_right = 63.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Yes"

[node name="ButtonNo" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 67.0
offset_right = 130.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "No"

[node name="ButtonAlt" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 134.0
offset_right = 197.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
text = "Alt"
